--- a/GeoTask.WebApi/GeoTask.WebApi.csproj
+++ b/GeoTask.WebApi/GeoTask.WebApi.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
@@ -6,8 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Evolve" Version="2.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Npgsql" Version="4.1.3" />
   </ItemGroup>
 
   <ItemGroup>
@@ -17,6 +19,12 @@
   <ItemGroup>
     <ProjectReference Include="..\GeoTask.Application\GeoTask.Application.csproj" />
     <ProjectReference Include="..\GeoTask.Common\GeoTask.Common.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Db\Migrations\V1_0_0__CREATE_TABLES.sql">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
