--- a/GeoTask.WebApi/appsettings.json
+++ b/GeoTask.WebApi/appsettings.json
@@ -1,8 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+	"Logging": {
+		"LogLevel": {
+			"Default": "Warning"
+		}
+	},
+	"AllowedHosts": "*",
+	"ConnectionStrings": {
+		"PrimaryConnection": "Server=127.0.0.1;Database=GeoDb;User Id=postgres;Password=postgres;"
+	}
 }
